# fast_test

./: pyproject.toml  requirements.txt
.github/workflows/: ci.yml
fast_test_2/: main.py
tests/: test_app.py  test_calculator.py  test_main.py
