[tool.poetry]
name = "fast-test-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "modules"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
requests = "^2.31.0"
uvicorn = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

