[tool.poetry]
name = "fast-test-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "modules"},
    {include = "fast_test_2"},
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
uvicorn = "^0.23.1"
fastapi = "^0.101.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

